# confetti-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README-crates.io.md  README.md
.github/workflows/: rust.yml
derive/: Cargo.toml
derive/src/: lib.rs
examples/: README.md  ai_training_config.rs  application_settings.rs  config_mapper.rs  document_markup.rs  domain_specific_language.rs  language_extensions.rs  nested_config.rs  ui_configuration.rs  user_settings.rs  workflow_automation.rs
src/: lexer.rs  lib.rs  macros.rs  mapper.rs  parser.rs
