[package]
name = "confetti-rs"
version = "0.1.0"
edition = "2024"
description = "A configuration language and parser library written in Rust"
authors = ["A.Shakhmatov <dev@shakhmatov.com>"]
license = "MIT"
repository = "https://github.com/shkmv/confetti-rs"
documentation = "https://docs.rs/confetti-rs"
readme = "README.md"
keywords = ["configuration", "parser", "language"]
categories = ["parser-implementations", "configuration"]

[features]
default = []
derive = ["confetti-derive"]

[dependencies]
# No external dependencies, using only std
confetti-derive = { path = "derive", version = "0.1.0", optional = true }

[workspace]
members = ["derive"]
