[package]
name = "confetti-rs"
version = "0.1.1"
edition = "2021"
description = "A configuration language and parser library written in Rust"
authors = ["A.Shakhmatov <dev@shakhmatov.com>"]
license = "MIT"
repository = "https://github.com/shkmv/confetti-rs"
documentation = "https://docs.rs/confetti-rs"
readme = "README-crates.io.md"
keywords = ["configuration", "parser", "language"]
categories = ["parser-implementations", "config"]
include = [
    "src/**/*",
    "Cargo.toml",
    "LICENSE",
    "README-crates.io.md",
    "CHANGELOG.md",
    "examples/**/*.rs",
]

[features]
default = []
derive = ["confetti-derive"]

[dependencies]
# Для локальной разработки используем путь, а при публикации на crates.io
# этот путь будет игнорироваться и будет использоваться только версия
confetti-derive = { path = "derive", version = "0.1.1", optional = true }
unicode-general-category = "1"

[workspace]
members = ["derive"]

[package.metadata.docs.rs]
all-features = true
